...
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_nickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_nickname_hint"
                            android:inputType="textPersonName"
                            android:maxLines="1" />

...
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_phone_hint"
                            android:inputType="phone"
                            android:maxLines="1" />

...
